Changelog
=========

0.5 (unreleased)
----------------

- Nothing changed yet.


0.4 (2012-05-14)
----------------

- Update MANIFEST.in to include zcml and other non-python files. [jcbrand]


0.3 (2012-05-10)
----------------

- Add a unique Id generator. [jcbrand] 


0.2 (2012-02-14)
----------------

- Bugfix. README.rst was omitted from the egg. [jcbrand]


0.1 (2012-02-12)
----------------

- Initial release. [jcbrand]