@@ -2,16 +2,28 @@ import datetime
 import logging
 import loremipsum
 import random
-import time
+import transaction
 import urllib
 from StringIO import StringIO
 from base64 import decodestring
 
-from zope.component import getMultiAdapter, getUtility
+from zope import component
+from zope.globalrequest import getRequest
 from zope.container.interfaces import INameChooser
+from zope.schema import getFieldNames
 from zope.schema import interfaces
+from zope.schema.interfaces import WrongType
+
+from z3c.form.interfaces import IDataConverter
+from z3c.form.interfaces import IDataManager
+from z3c.form.interfaces import IFieldWidget
+from z3c.form.interfaces import NOT_CHANGED
+from z3c.form.interfaces import NO_VALUE
 
 from plone.app.z3cform.wysiwyg.widget import IWysiwygWidget
+
+from plone.autoform.interfaces import WIDGETS_KEY
+from plone.dexterity import utils
 from plone.dexterity.interfaces import IDexterityContent
 from plone.dexterity.interfaces import IDexterityFTI
 from plone.uuid.interfaces import IUUID
@@ -19,7 +31,6 @@ from plone.uuid.interfaces import IUUID
 from Acquisition import aq_base
 from OFS.interfaces import IObjectManager
 from DateTime import DateTime
-from zExceptions import BadRequest
 
 from Products.CMFCore.utils import getToolByName
 from Products.ATContentTypes.interfaces import IATEvent
@@ -46,7 +57,7 @@ def create_subobjects(root, context, data, total=0):
             if hasattr(base, 'constrainTypesMode') and base.constrainTypesMode:
                 types = context.locallyAllowedTypes
         elif IDexterityContent.providedBy(base):
-            fti = getUtility(IDexterityFTI, name=context.portal_type)
+            fti = component.getUtility(IDexterityFTI, name=context.portal_type)
             types = fti.filter_content_types and fti.allowed_content_types
             if not types:
                 msg = _('Either restrict the addable types in this folder or ' \
@@ -132,7 +143,7 @@ def create_object(context, portal_type, data):
     if IDexterityContent.providedBy(obj):
         if shasattr(obj, 'title'):
             obj.title = title
-            populate_dexterity_type(obj, data)
+        populate_dexterity_type(obj, data)
     else:
         obj.setTitle(title)
         populate_archetype(obj, data)
@@ -146,6 +157,8 @@ def create_object(context, portal_type, data):
 
     obj.reindexObject()
     log.info('%s Object created' % obj.portal_type)
+    if data.get('commit'):
+        transaction.commit()
     return obj
 
 def get_text_line():
@@ -161,54 +174,104 @@ def get_rich_text(data):
             url += '/%s' % key
     return urllib.urlopen(url).read().decode('utf-8')
 
-def populate_dexterity_type(obj, data):
-    view = getMultiAdapter((obj, obj.REQUEST), name="edit")
-    view.update()
-    view.form_instance.render()
-    fields = view.form_instance.fields._data_values
+def get_dexterity_schemas(context=None, portal_type=None):
+    """ Utility method to get all schemas for a dexterity object.
+        
+        IMPORTANT: Either context or portal_type must be passed in, NOT BOTH.
+        The idea is that for edit forms context is passed in and for add forms 
+        where we don't have a valid context we pass in portal_type.
 
-    for i in range(0, len(fields)):
-        field = fields[i].field 
-        name = field.__name__
+        This builds on getAdditionalSchemata, which works the same way.
+    """
+    if context is not None:
+        portal_type = context.portal_type
 
-        if name == 'title':
-            continue
+    fti = component.getUtility(IDexterityFTI, name=portal_type)
+    schemas = [fti.lookupSchema()]
+    for behavior_schema in \
+            utils.getAdditionalSchemata(context=context, portal_type=portal_type):
+        if behavior_schema is not None:
+            schemas.append(behavior_schema)
+    return schemas
 
-        if interfaces.IChoice.providedBy(field):
-            if shasattr(field, 'vocabulary') and field.vocabulary:
-                vocabulary = field.vocabulary
-            elif shasattr(field, 'vocabularyName') and field.vocabularyName:
-                factory = getUtility(
-                                interfaces.IVocabularyFactory, 
-                                field.vocabularyName)
-                vocabulary = factory(obj)
-            else:
-                continue
+
+def get_dummy_dexterity_value(obj, widget, data):
+    value = None
+    field = widget.field
+    catalog = getToolByName(obj, 'portal_catalog')
+    if interfaces.IChoice.providedBy(field):
+        if shasattr(field, 'vocabulary') and field.vocabulary:
+            vocabulary = field.vocabulary
+        elif shasattr(field, 'vocabularyName') and field.vocabularyName:
+            factory = component.getUtility(
+                            interfaces.IVocabularyFactory, 
+                            field.vocabularyName)
+            vocabulary = factory(obj)
+        else:
+            return 
+
+        if interfaces.IContextSourceBinder.providedBy(vocabulary):
+            criteria = vocabulary.selectable_filter.criteria
+            results = catalog(**criteria)
+            if not len(results):
+                return 
+            value = results[random.randint(0, len(results)-1)].getObject()
+        else:
+            if interfaces.ITreeVocabulary.providedBy(vocabulary):
+                # Can't yet deal with tree vocabs
+                return
             index  = random.randint(0, len(vocabulary)-1)
             value = vocabulary._terms[index].value
 
-        elif interfaces.ITextLine.providedBy(field):
-            value = get_text_line()
+    elif interfaces.ITextLine.providedBy(field):
+        length = getattr(field, 'max_length', None) 
+        value = unicode(get_text_line()[:length])
 
-        elif interfaces.IText.providedBy(field):
-            widget = view.form_instance.widgets._data_values[i]
-
-            if IWysiwygWidget.providedBy(widget):
-                value = get_rich_text(data) 
-            else:
-                value = get_text_paragraph() 
-
-        elif interfaces.IDatetime.providedBy(field):
-            days = random.random()*10 * (random.randint(-1,1) or 1)
-            value = datetime.datetime.now() + datetime.timedelta(days,0)
-
-        elif interfaces.IDate.providedBy(field):
-            days = random.random()*10 * (random.randint(-1,1) or 1)
-            value = datetime.datetime.now() + datetime.timedelta(days,0)
-
+    elif interfaces.IText.providedBy(field):
+        if IWysiwygWidget.providedBy(widget):
+            value = unicode(get_rich_text(data))
         else:
-            continue
-        field.set(obj, value)
+            value = unicode(get_text_paragraph())
+
+    elif interfaces.IDatetime.providedBy(field):
+        days = random.random()*10 * (random.randint(-1,1) or 1)
+        value = datetime.datetime.now() + datetime.timedelta(days,0)
+
+    elif interfaces.IDate.providedBy(field):
+        days = random.random()*10 * (random.randint(-1,1) or 1)
+        value = datetime.datetime.now() + datetime.timedelta(days,0)
+
+    return value
+
+
+def populate_dexterity_type(obj, data):
+    request = getRequest()
+    for schema in get_dexterity_schemas(context=obj):
+        for name in getFieldNames(schema):
+            field = schema[name]
+            autoform_widgets = schema.queryTaggedValue(WIDGETS_KEY, default={})
+            if name in autoform_widgets:
+                widgetclass = utils.resolveDottedName(autoform_widgets[name])
+                widget = widgetclass(field, request)
+            else:
+                widget = component.getMultiAdapter((field, request), IFieldWidget)
+        
+            widget.context = obj
+            widget.ignoreRequest = True
+            widget.update()
+            value = widget.value
+
+            if not value or value in [NOT_CHANGED, NO_VALUE] or \
+                    not IDataConverter(widget).toFieldValue(widget.value):
+                value = get_dummy_dexterity_value(obj, widget, data)
+
+            if value:
+                dm = component.getMultiAdapter((obj, field), IDataManager)
+                try:
+                    dm.set(value)
+                except WrongType:
+                    value = IDataConverter(widget).toFieldValue(value)
+                    dm.set(value)
 
 
 def populate_archetype(obj, data):
